<resources>
    <string name="app_name">LinkCamp</string>
    <string name="getting">Getting nearer to\nYour Dream  here</string>
    <string name="lss">Learn - Share - Strive </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_here">Login here</string>
    <string name="welcome">Welcome back you’ve\nbeen missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_p">Forgot your password?</string>
    <string name="signin">Sign in</string>
    <string name="create_a">Create new account</string>
    <string name="create">Create Account</string>
    <string name="create_note">Create an account so you can explore all the\ninspiring information</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="already">Already have an account</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="dint">Didn’t you receive the OTP?</string>
    <string name="resend">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="role">Role</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ic_front">Upload Front of IC:</string>
    <string name="ic_back">Upload Back of IC:</string>
    <string name="choose_image">Choose a image or take a photo</string>
    <string name="png">JPEG and PNG formats, up to 10MB</string>
    <string name="identification_number">Identification Number</string>
    <string name="example_front">Example Front of the IC</string>
    <string name="example_back">Example Back of the IC</string>
    <string name="upload_profile">Upload Profile Image</string>
    <string name="upload_pro">Please Upload Your Profile in JPEG and PNG formats</string>
    <string name="later">Upload Profile Later</string>
    <string name="term">Terms &amp; Conditions</string>
    <string name="check_term">Accept Term and Condition </string>
    <string name="upload_c">Upload Certificates</string>
    <string name="choose_c">Choose a image or PDF</string>
    <string name="upload_ce">JPEG , PNG and PDF formats, up to 10MB</string>
    <string name="example_c">Click Example Format of Certificates</string>
    <string name="single">Single Certificate</string>
    <string name="muti">Mutlipy Certificates</string>
    <string name="upload_ssm">Upload SSM Certificates</string>
    <string name="example_ssm">Click Example Format of SSM Certificates</string>
    <string name="image">Image</string>
    <string name="pdf">PDF</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_detail">Forgot your password? \nDon\'t worry, reset your password here</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="conform">Confirm</string>
    <string name="post">Post</string>
    <string name="drawer_open">open\n</string>
    <string name="drawer_close">close</string>
    <string name="description">Description</string>
    <string name="description_w">Description Workshop</string>

    <string name="workshop">Create Workshop</string>
    <string name="workshop_desciption">Here, you can easily plan and publish your workshop to share your knowledge and skills with a wider audience.</string>
    <string name="view">View</string>
    <string name="overview">Session Overview:</string>
    <string name="tutor">Tutor</string>
    <string name="upload_pdf">PDF formats, up to 10MB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="job_desription">Job Desription :</string>
    <string name="key_responsibilities">Key Responsibilities :</string>
    <string name="requirements">Requirements :</string>
    <string name="application">Application</string>
    <string name="applied">Applied</string>
    <string name="type_a_message">Type a message</string>
    <string name="receive_withdraw">Receive / Withdraw</string>
    <string name="send">Send</string>
    <string name="withdraw">Withdraw</string>
</resources>