<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_note_text">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"

                android:layout_height="300dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/wfh" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/getting"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting"
                android:textColor="@color/blue1"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lss"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:layout_marginBottom="60dp"
                android:textAlignment="center"
               android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp">

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue1"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
